--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,14 @@
 			<artifactId>spring-boot-starter-actuator</artifactId>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/org.junit/org.junit -->
+		<dependency>
+			<groupId>org.junit</groupId>
+			<artifactId>org.junit</artifactId>
+			<version>3.8.1</version>
+		</dependency>
+
+
 	</dependencies>
 
 	<build>
