--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,12 @@
 			<version>3.8.1</version>
 		</dependency>
 
+		<dependency>
+			<groupId>com.google.inject</groupId>
+			<artifactId>guice</artifactId>
+			<version>3.0</version>
+		</dependency>
+
 
 	</dependencies>
 
