--- a/pom.xml
+++ b/pom.xml
@@ -41,17 +41,17 @@
 			<artifactId>spring-boot-starter-actuator</artifactId>
 		</dependency>
 
-		<!-- https://mvnrepository.com/artifact/org.junit/org.junit -->
-		<dependency>
-			<groupId>org.junit</groupId>
-			<artifactId>org.junit</artifactId>
-			<version>3.8.1</version>
-		</dependency>
-
 		<dependency>
 			<groupId>com.google.inject</groupId>
 			<artifactId>guice</artifactId>
 			<version>3.0</version>
+		</dependency>
+
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.8.1</version>
+			<scope>test</scope>
 		</dependency>
 
 
