[new] added spring banner

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,29 @@ spring.main.banner-mode=off
 logging.level.org.springframework=ERROR
 
 logging.level.*=ERROR
+
+
+
+
+
+######################### Spring Banner Start ##########################
+spring.main.banner-mode=off
+spring.banner.location=classpath:banner.txt
+# If you use picture uncomment below
+#spring.banner.image.location=classpath:custom-banner.png
+
+spring.main.log-startup-info=false
+spring.output.ansi.enabled=always
+########################## Spring Banner End  ##########################
+
+
+# For SB data jpa
+
+logging.level.org.springframework=ERROR
+
+spring.jpa.hibernate.ddl-auto=none
+spring.datasource.initialization-mode=always
+spring.datasource.platform=postgres
+spring.datasource.url=jdbc:postgresql://localhost:5432/sb-all
+spring.datasource.username=postgres
+spring.datasource.password=123456
