--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,30 +1,33 @@
 
 my.msg=Hello there
-
-spring.main.banner-mode=off
-logging.level.org.springframework=ERROR
-
-logging.level.*=ERROR
+logging.level.org.springframework=INFO
 
 
 
 
 
 ######################### Spring Banner Start ##########################
-spring.main.banner-mode=off
-spring.banner.location=classpath:banner.txt
+
+# Disable the banner
+#spring.main.banner-mode=off
+
+#spring.banner.location=classpath:banner.txt
 # If you use picture uncomment below
 #spring.banner.image.location=classpath:custom-banner.png
 
-spring.main.log-startup-info=false
 spring.output.ansi.enabled=always
+
+#### If you use image then uncomment below #####
+
+#spring.banner.image.location=classpath:banner.jpg
+#spring.banner.image.width= 1000
+#spring.banner.image.height= 1000
+#spring.banner.image.margin= 1
+#spring.banner.image.invert= 2
 ########################## Spring Banner End  ##########################
 
 
 # For SB data jpa
-
-logging.level.org.springframework=ERROR
-
 spring.jpa.hibernate.ddl-auto=none
 spring.datasource.initialization-mode=always
 spring.datasource.platform=postgres
