[new] added exteranlized configuration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,15 @@
 my.msg=Hello there
 logging.level.org.springframework=INFO
 
+######################### Conditional Configuration Start #########################
+conditional.attr=condition
+######################### Conditional Configuration End #########################
 
 
 
+######################### Externalized Configuration Start #########################
+externalized.name=marco
+######################### Externalized Configuration End #########################
 
 ######################### Spring Banner Start ##########################
 
