[new] added spring boot @ConditionalOnProperty

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,8 @@ logging.level.org.springframework=INFO
 
 ######################### Conditional Configuration Start #########################
 conditional.attr=condition
+
+conditional.mybean.enabled=true
 ######################### Conditional Configuration End #########################
 
 
