[new] added @ConfigurationProperties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,20 @@ conditional.mybean.enabled=true
 ######################### Conditional Configuration End #########################
 
 
+######################### Configuraiton Properties Start #########################
+mail.host=localhost
+mail.port=589
+mail.from=marco
+mail.defaultRecipients[0]=marco.huang@sap.com
+mail.defaultRecipients[1]=ht57647012@163.com
+mail.additionalHeaders.redelivery=true
+mail.additionalHeaders.secure=true
+
+# For Object
+mail.credentials.username=john
+mail.credentials.password=password
+mail.credentials.authMethod=SHA1
+######################### Configuraiton Properties End #########################
 
 ######################### Externalized Configuration Start #########################
 externalized.name=marco
