--- a/pom.xml
+++ b/pom.xml
@@ -116,6 +116,13 @@
 		</dependency>
 
 
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-beans</artifactId>
+			<version>5.1.4.RELEASE</version>
+		</dependency>
+
+
 	</dependencies>
 
 	<build>
