[new] added for environment post processor

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,10 @@ conditional.mybean.enabled=true
 ######################### Conditional Configuration End #########################
 
 
+
+
+
+
 ######################### Configuraiton Properties Start #########################
 mail.host=localhost
 mail.port=589
@@ -24,9 +28,26 @@ mail.credentials.password=password
 mail.credentials.authMethod=SHA1
 ######################### Configuraiton Properties End #########################
 
+
+
+
+
+
 ######################### Externalized Configuration Start #########################
 externalized.name=marco
 ######################### Externalized Configuration End #########################
+
+
+
+######################### EnvironmentPostProcessor Start #########################
+com.huang.environmentpostprocessor.calculation.mode=GROSS
+com.huang.environmentpostprocessor.gross.calculation.tax.rate=0.15
+######################### EnvironmentPostProcessor End #########################
+
+
+
+
+
 
 ######################### Spring Banner Start ##########################
 
