[new] updated for profile

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -29,6 +29,11 @@ mail.credentials.authMethod=SHA1
 ######################### Configuraiton Properties End #########################
 
 
+######################### Profile Start ##############################
+#name="xxx"
+spring.active.profiles=prod
+######################### Profile End ##############################
+
 
 
 
